--- a/peinconn/templates/index.html
+++ b/peinconn/templates/index.html
@@ -1,6 +1,5 @@
-{% extends "layout.html" %} {% block body %}
+{% extends "layouts/layout.html" %} 
+{% block body %}
 <h1>good</h1>
-<form action="/">
-  {{ form.hidden_tag() }} {{ form.username.label }}{{ form.username() }}
-</form>
+
 {% endblock %}
