--- a/peinconn/templates/layouts/layout.html
+++ b/peinconn/templates/layouts/layout.html
@@ -27,29 +27,10 @@
     <link rel="stylesheet" href="../static/css/style.css" />
   </head>
   <body class="page-body">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="">Meet</a>
 
-      <div>
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="">All Posts</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Add Posts</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Edit Posts</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Log In</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Register</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+
+    {% include "partials/navigation.html" %}
+
     {% block body %} {% endblock %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     {% block script %} {% endblock %}
